<resources>
    <string name="app_name">Habits</string>
    <string name="action_settings">Settings</string>
    <string name="Habits_text">HABITS</string>
    <string name="SignIn_button">SIGN IN</string>
    <string name="Register_button">REGISTER</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_edit">Edit</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="fb_button">Facebook</string>
    <string name="google_button">Google</string>
    <string name="or">______________________ OR _______________________</string>
    <string name="getout">GetMeOutFromHere</string>
    <string name="Sign_in">Sign In</string>
    <string name="title_activity_registry">Registry</string>
    <string name="First_name">______________</string>
    <string name="Last_name">______________</string>
    <string name="register_button">REGISTER</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="passwordagain_input">Password again</string>
    <string name="firstname_input">Name</string>
    <string name="lastname_input">Last Name</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
</resources>
