<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.manco.habits.MainActivity"
    android:background="#000000">


    <TextView
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Habits_text"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:background="#dddcdc"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textIsSelectable="false"
        android:layout_marginTop="159dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/Register_button"
        android:id="@+id/register"
        android:background="#dddcdc"
        android:textColor="#000000"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="20dp"
        android:layout_alignTop="@+id/signIn"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/SignIn_button"
        android:id="@+id/signIn"
        android:layout_marginRight="80dp"
        android:textColor="#ffffff"
        android:singleLine="false"
        android:background="#48ce6e"
        android:layout_marginLeft="20dp"
        android:layout_gravity="left|bottom"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
